--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,19 @@
 
 /* base styles */
 * {
+  box-sizing: border-box;
   margin: 0;
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   color: #333;
 }
+/*self added*/
+article {
+  margin-block: 2em;
+  padding: 2em 5em;
+  border: 2px solid #f1356d;
+  border-radius: 2em;
+}
+
 .navbar {
   padding: 20px;
   display: flex;
@@ -41,33 +50,40 @@
   border-bottom: 1px solid #fafafa;
 }
 .blog-preview:hover {
-  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
 }
 .blog-preview h2 {
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 8px;
 }
-.blog-preview a{
+.blog-preview a {
   text-decoration: none;
 }
 
 /* blog details page */
 .blog-details h2 {
-  font-size: 20px;
+  font-size: 1.5em;
   color: #f1356d;
   margin-bottom: 10px;
 }
 .blog-details div {
-  margin: 20px 0;
+  margin: 3em 0;
+  width: 100%;
+  overflow-wrap: break-word;
 }
 .blog-details button {
   background: #f1356d;
   color: #fff;
   border: 0;
-  padding: 8px;
+  padding: 1em 2em;
   border-radius: 8px;
   cursor: pointer;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* create new blog form */
@@ -79,25 +95,32 @@
 .create label {
   text-align: left;
   display: block;
+  font-weight: 500;
 }
 .create h2 {
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 30px;
 }
-.create input, .create textarea, .create select {
+.create input,
+.create textarea,
+.create select {
   width: 100%;
   padding: 6px 10px;
   margin: 10px 0;
-  border: 1px solid #ddd;
+  border: 2.5px solid #ddd;
   box-sizing: border-box;
   display: block;
+}
+.create textarea {
+  height: 10em;
 }
 .create button {
   background: #f1356d;
   color: #fff;
+  margin-top: 4em;
   border: 0;
-  padding: 8px;
+  padding: 1em 2em;
   border-radius: 8px;
   cursor: pointer;
 }
